# open-gl

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/glad/: glad.h
src/: glad.c  main.cpp
